--- a/saptarang.org/envato/traveler/01/css/style.css
+++ b/saptarang.org/envato/traveler/01/css/style.css
@@ -2488,6 +2488,9 @@ ul.social li a:hover {
         left: 1.35em;
         z-index: 10 !important;
     }
+    .right.placeInfo {
+        height: 47em !important;
+    }
 }
 @media only screen and (min-width: 768px) {
     .subscribe form .btn {
